Closed Bug 1296664 Opened 8 years ago Closed 8 years ago

nsLDAPURL.obj : error LNK2001: unresolved external symbol "public: virtual enum nsresult __stdcall nsLDAPURL::SetHostAndPort(class nsACString_internal const &)" (?SetHostAndPort@nsLDAPURL@@UAG?AW4nsresult@@ABVnsACString_internal@@@Z)

Categories

(MailNews Core :: Backend, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 51.0

People

(Reporter: Paenglab, Assigned: philip.chee)

References

Details

(Keywords: dogfood)

Attachments

(1 file)

Bug 1295636 does break the build with following errors: 1:13.70 nsLDAPURL.obj : error LNK2001: unresolved external symbol "public: virtual enum nsresult __stdcall nsLDAPURL::SetHostPort(class nsACString_internal const &)" (?SetHostPort@nsLDAPURL@@UAG?AW4nsresult@@ABVnsACString_internal@@@Z) 1:13.70 1:13.70 nsAddbookUrl.obj : error LNK2001: unresolved external symbol "public: virtual enum nsresult __stdcall nsAddbookUrl::SetHostAndPort(class nsACString_internal const &)" (?SetHostAndPort@nsAddbookUrl@@UAG?AW4nsresult@@ABVnsACString_internal@@@Z) 1:13.70 1:13.70 nsMailboxUrl.obj : error LNK2001: unresolved external symbol "public: virtual enum nsresult __stdcall nsMsgMailNewsUrl::SetHostAndPort(class nsACString_internal const &)" (?SetHostAndPort@nsMsgMailNewsUrl@@UAG?AW4nsresult@@ABVnsACString_internal@@@Z) 1:13.70 1:13.70 nsPop3URL.obj : error LNK2001: unresolved external symbol "public: virtual enum nsresult __stdcall nsMsgMailNewsUrl::SetHostAndPort(class nsACString_internal const &)" (?SetHostAndPort@nsMsgMailNewsUrl@@UAG?AW4nsresult@@ABVnsACString_internal@@@Z) 1:13.70 1:13.70 nsNntpUrl.obj : error LNK2001: unresolved external symbol "public: virtual enum nsresult __stdcall nsMsgMailNewsUrl::SetHostAndPort(class nsACString_internal const &)" (?SetHostAndPort@nsMsgMailNewsUrl@@UAG?AW4nsresult@@ABVnsACString_internal@@@Z) 1:13.70 1:13.70 nsMsgMailNewsUrl.obj : error LNK2001: unresolved external symbol "public: virtual enum nsresult __stdcall nsMsgMailNewsUrl::SetHostAndPort(class nsACString_internal const &)" (?SetHostAndPort@nsMsgMailNewsUrl@@UAG?AW4nsresult@@ABVnsACString_internal@@@Z) 1:13.70 1:13.70 nsSmtpUrl.obj : error LNK2001: unresolved external symbol "public: virtual enum nsresult __stdcall nsMsgMailNewsUrl::SetHostAndPort(class nsACString_internal const &)" (?SetHostAndPort@nsMsgMailNewsUrl@@UAG?AW4nsresult@@ABVnsACString_internal@@@Z) 1:13.70 1:13.70 nsImapUrl.obj : error LNK2001: unresolved external symbol "public: virtual enum nsresult __stdcall nsMsgMailNewsUrl::SetHostAndPort(class nsACString_internal const &)" (?SetHostAndPort@nsMsgMailNewsUrl@@UAG?AW4nsresult@@ABVnsACString_internal@@@Z) 1:13.70 1:13.70 JaUrl.obj : error LNK2001: unresolved external symbol "public: virtual enum nsresult __stdcall nsMsgMailNewsUrl::SetHostAndPort(class nsACString_internal const &)" (?SetHostAndPort@nsMsgMailNewsUrl@@UAG?AW4nsresult@@ABVnsACString_internal@@@Z) 1:13.70 1:13.70 nsSmtpUrl.obj : error LNK2001: unresolved external symbol "public: virtual enum nsresult __stdcall nsMailtoUrl::SetHostAndPort(class nsACString_internal const &)" (?SetHostAndPort@nsMailtoUrl@@UAG?AW4nsresult@@ABVnsACString_internal@@@Z) Backout of Bug 1295636 fixes the building.
Attached patch Bustage fix v1Splinter Review
Assignee: nobody → philip.chee
Status: NEW → ASSIGNED
Attachment #8783118 - Flags: review?(rkent)
Attachment #8783118 - Flags: review?(Pidgeot18)
Comment on attachment 8783118 [details] [diff] [review] Bustage fix v1 With this patch building works again.
Attachment #8783118 - Flags: feedback+
Comment on attachment 8783118 [details] [diff] [review] Bustage fix v1 Review of attachment 8783118 [details] [diff] [review]: ----------------------------------------------------------------- Thanks Ratty, Stainless Steel Rat Saves the World. Do we know how this bustage came about? ::: ldap/xpcom/src/nsLDAPURL.cpp @@ +267,5 @@ > + > + return mBaseURL->SetHostAndPort(aHostPort); > +} > + > +NS_IMETHODIMP trailing space. ::: mailnews/addrbook/src/nsAddbookUrl.cpp @@ +117,5 @@ > } > > +NS_IMETHODIMP nsAddbookUrl::SetHostAndPort(const nsACString &aHostPort) > +{ > + return m_baseURL->SetHostAndPort(aHostPort); Why not check m_baseURL here like above? ::: mailnews/base/util/nsMsgMailNewsUrl.cpp @@ +409,5 @@ > } > > +NS_IMETHODIMP nsMsgMailNewsUrl::SetHostAndPort(const nsACString &aHostPort) > +{ > + return m_baseURL->SetHostAndPort(aHostPort); Same question here. ::: mailnews/compose/src/nsSmtpUrl.cpp @@ +448,5 @@ > > +NS_IMETHODIMP nsMailtoUrl::SetHostAndPort(const nsACString &aHostPort) > +{ > + m_baseURL->SetHostAndPort(aHostPort); > + return ParseUrl(); And here. Why ParseUrl()?
(In reply to Jorg K (GMT+2, PTO during summer) from comment #4) > Do we know how this bustage came about? I see: Bug 1295636.
Do these functions need to be marked "override"? clang is much more fussy about this, see bug 1294260. Can you do a try build on Mac to make sure, please.
Comment on attachment 8783118 [details] [diff] [review] Bustage fix v1 Sorry about the questions, this is OK, it copies what other functions do. Let me run a try and then we can land this.
Attachment #8783118 - Flags: review?(rkent)
Attachment #8783118 - Flags: review?(Pidgeot18)
Attachment #8783118 - Flags: review+
(In reply to Jorg K (GMT+2, PTO during summer) from comment #6) > Do these functions need to be marked "override"? Looking at this further, that's another silly question. Thanks for the patch, I'll land it once the try run completes.
Comment on attachment 8783118 [details] [diff] [review] Bustage fix v1 Review of attachment 8783118 [details] [diff] [review]: ----------------------------------------------------------------- Works for me on linux64. Please remove the spaces when pushing.
Attachment #8783118 - Flags: review+
Thanks, Aceman. Yes, I removed the one added trailing space, I don't intend to clean up the whole file. Push coming in the next hour.
Summary: nsLDAPURL.obj : error LNK2001: unresolved external symbol "public: virtual enum nsresult __stdcall nsLDAPURL::SetHostPort(class nsACString_internal const &)" (?SetHostPort@nsLDAPURL@@UAG?AW4nsresult@@ABVnsACString_internal@@@Z) → nsLDAPURL.obj : error LNK2001: unresolved external symbol "public: virtual enum nsresult __stdcall nsLDAPURL::SetHostAndPort(class nsACString_internal const &)" (?SetHostAndPort@nsLDAPURL@@UAG?AW4nsresult@@ABVnsACString_internal@@@Z)
(In reply to Jorg K (GMT+2, PTO during summer) from comment #11) > Push coming in the next hour. Sorry, I missed it and trees are closed for maintenance. I'll push it later, or anyone else can. r=aceman,jorgk.
Component: LDAP Integration → Backend
OS: Unspecified → All
Hardware: Unspecified → All
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 51.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: