Bug 1296664 Bustage fix: Add IDL method SetHostAndPort from Bug 1295636. r=jorgk,aceman, a=jorgk CLOSED TREE